# project-mcgg

./: .gitignore  AGENT.md  README.md  pyproject.toml
analisis-pola/: AGENT.md  README.md
analisis-pola/src/mcgg/: __init__.py  __main__.py  cli.py  engine.py  models.py
analisis-pola/src/mcgg.egg-info/: SOURCES.txt  requires.txt
analisis-pola/src/mcgg_analyzer.egg-info/: SOURCES.txt  entry_points.txt  requires.txt
analisis-pola/tests/: test_cli_guided_flow.py  test_engine.py
gathering-data/: AGENT.md  README.md  pyproject.toml
gathering-data/data/sessions/: 6719ce27.json  fa4227ff.json
gathering-data/src/mcgg_gathering_data.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
gathering-data/src/pattern_analyzer/: __init__.py  __main__.py  analysis.py  cli.py  gui.py  models.py  rounds.py  service.py  storage.py
gathering-data/tests/: test_cli.py  test_models.py  test_rounds.py  test_service.py  test_storage.py
reference/: CARA MENEBAK LAWAN SELANJUTNYA DI MAGIC CHESS GO GO - 100% AKURAT - by DOSEN MAGIC CHESS.txt  detail-fase-ronde-mcgg.md  informasi-mcgg.md  ringkasan-sistem-prediksi-mcgg.md
src/mcgg/: __main__.py  cli.py  engine.py  i18n.py  models.py  storage.py
src/mcgg.egg-info/: PKG-INFO
src/mcgg/ui/: forms.py  panels.py  tables.py
src/mcgg_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_cli_guided_flow.py  test_engine.py  test_storage.py
