[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcgg-gathering-data"
version = "0.1.0"
description = "Interactive TUI data gathering for 8-player MCGG matchmaking analysis"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
mcgg-data = "pattern_analyzer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
